--- a/projects.html
+++ b/projects.html
@@ -102,7 +102,7 @@
 				<div id="sidebar" class="4u sidebar">
 					<section>
 						<header class="major">
-							<h2>Etiam malesuada</h2>
+							<h2>Open projects</h2>
 						</header>
 						<div class="row half">
 							<section class="6u">
@@ -127,7 +127,7 @@
 					</section>
 					<section>
 						<header class="major">
-							<h2>Mauris vulputate</h2>
+							<h2>Projects abroad</h2>
 						</header>
 						<ul class="default">
 							<li><a href="#">Pellentesque lectus gravida blandit</a></li>
