--- a/projects.html
+++ b/projects.html
@@ -43,7 +43,7 @@
 								<a href="">Quick Links</a>
 								<ul>
 									<li><a href="#">Download App</a></li>
-									<li><a href="#">Visit Shop</a></li>
+									<li><a href="/shop.html">Visit Shop</a></li>
 									<li><a href="#footer">Contact us</a></li>
 									<li><a href="/services.html">Our Story</a></li>
 									<li><a href="/services.html">Services</a></li>
@@ -55,7 +55,7 @@
 					<li><a href="#">Projects</a></li>
 					<li><a href="no-sidebar.html">Download App</a></li>
 				</ul>
-			</nav>		
+			</nav>
 		</div>
 	</div>
 
@@ -71,30 +71,16 @@
 							<h2>Projects</h2>
 							<span class="byline">Partnerships to achieve the goal.</span>
 						</header>
-						<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor
-							enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh,
-							quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra
-							sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum pulvinar sed,
-							imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel,
-							sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate
-							sed, convallis at, ultricies quis, justo. Donec nonummy magna. Quisque eleifend. Aliquam
-							lacinia metus ut elit. Donec ornare neque ac sem. Mauris aliquet.</p>
-						<p>Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare
-							ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec
-							condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget
-							ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae,
-							turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec,
-							leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec
-							ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies
-							quis, justo. Phasellus tempor vehicula.</p>
-						<p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor
-							enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh,
-							quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra
-							sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar
-							sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat
-							vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo,
-							vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam
-							lacinia metus ut elit.</p>
+						<p>At Matodi todi, we are dedicated to promoting sustainable agricultural practices that drive positive environmental, social, and economic outcomes. Our agricultural projects are designed to align with and contribute to the achievement of the United Nations Sustainable Development Goals (SDGs). Through innovation, collaboration, and sustainable farming practices, we aim to create lasting impacts in the communities we serve.</p>
+						<p>Are you ready to make a meaningful impact in agriculture and sustainability? <br> Whether you're a farmer, an innovator, or someone passionate about positive change, Matodi Todi welcomes you to be part of our mission. Together, we can drive the transformation needed to promote sustainable agriculture, empower communities, and contribute to achieving the Sustainable Development Goals (SDGs).</p>
+
+							<p><b>Get Involved:</b>
+							<ul>
+							<li><b>Join Matodi Todi </b>– Become part of a dynamic community of farmers, entrepreneurs, and sustainability advocates working toward a greener, more prosperous future.</li>
+							<br>
+							<li><b>Download the Matodi Todi App</b> – Access cutting-edge resources, tools, and support for sustainable farming practices, climate-smart agriculture, and market connections, all at your fingertips.</li>
+							Take the first step today! Together, we can grow a more sustainable tomorrow.</p>
+						    </ul>
 					</section>
 				</div>
 
@@ -107,36 +93,36 @@
 						<div class="row half">
 							<section class="6u">
 								<ul class="default">
-									<li><a href="#">Donec facilisis tempor</a></li>
-									<li><a href="#">Nulla convallis cursus</a></li>
-									<li><a href="#">Integer congue euis</a></li>
-									<li><a href="#">Venenatis vulputate</a></li>
-									<li><a href="#">Morbi ligula volutpat</a></li>
+									<li><a href="#">Sustainable Agriculture</a></li>
+									<li><a href="#">Women in Agriculture Empowerment</a></li>
+									<li><a href="#">Youth Engagement and Agriculture Innovation</a></li>
+									<li><a href="#">Market Access and Value Chain Development</a></li>
+									<li><a href="#">Water Mangement for Sustainable Agriculture</a></li>
 								</ul>
 							</section>
 							<section class="6u">
 								<ul class="default">
-									<li><a href="#">Donec facilisis tempor</a></li>
-									<li><a href="#">Nulla convallis cursus</a></li>
-									<li><a href="#">Integer congue euis</a></li>
-									<li><a href="#">Venenatis vulputate</a></li>
-									<li><a href="#">Morbi ligula volutpat</a></li>
+									<li><a href="#">Affordable and clean energy management</a></li>
+									<li><a href="#">Responsible consumption and waste production</a></li>
+									<li><a href="#">Reduced inequalities</a></li>
+									<li><a href="#">Knowledege and skills transfer</a></li>
+									<li><a href="#">Efficient clean energy production</a></li>
 								</ul>
 							</section>
 						</div>
 					</section>
 					<section>
 						<header class="major">
-							<h2>Projects abroad</h2>
+							<h2>Coming soon</h2>
 						</header>
 						<ul class="default">
-							<li><a href="#">Pellentesque lectus gravida blandit</a></li>
-							<li><a href="#">Lorem ipsum consectetuer adipiscing</a></li>
-							<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-							<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
-							<li><a href="#">Maecenas vitae orci feugiat eleifend</a></li>
-							<li><a href="#">Phasellus nibh pellentesque congue</a></li>
-							<li><a href="#">Cras vitae metus aliquam pharetra</a></li>
+							<li><a href="#">Matodi todi foreign currecny remmittence</a></li>
+							<li><a href="#">Matodi todi card</a></li>
+							<li><a href="#">Matodi todi green credit</a></li>
+							<li><a href="#">Matodi todi grant</a></li>
+							<li><a href="#">Matodi todi your shop online</a></li>
+							<li><a href="#">Matodi todi developers</a></li>
+							<li><a href="#">Matodi todi careers</a></li>
 						</ul>
 					</section>
 				</div>
@@ -155,13 +141,15 @@
 					<section>
 						<header class="major">
 							<h2>Quick Links</h2>
-							<span class="byline">Matodi todi is a <a href="https://b2bhint.com/en/company/za/matodi-todi--K2015182744">registered company</a> find out more :</span>
+							<span class="byline">Matodi todi is a <a
+									href="https://b2bhint.com/en/company/za/matodi-todi--K2015182744">registered
+									company</a> find out more :</span>
 						</header>
 						<div class="row">
 							<section class="6u">
 								<ul class="default">
 									<li><a href="#">Download App.</a></li>
-									<li><a href="#">Visit Shop.</a></li>
+									<li><a href="/shop.html">Visit Shop.</a></li>
 									<li><a href="/services.html">Services.</a></li>
 									<li><a href="/index.html">Home.</a></li>
 								</ul>
