--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 								<a href="">Quick Links</a>
 								<ul>
 									<li><a href="#">Download App</a></li>
-									<li><a href="#">Visit Shop</a></li>
+									<li><a href="/shop.html">Visit Shop</a></li>
 									<li><a href="#footer">Contact us</a></li>
 									<li><a href="/services.html">Our Story</a></li>
 									<li><a href="/projects.html">Projects</a></li>
@@ -53,7 +53,7 @@
 					</li>
 					<li><a href="services.html">Services</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="no-sidebar.html">Download App</a></li>
+					<li><a href="#">Download App</a></li>
 				</ul>
 			</nav>
 			<!-- Banner -->
@@ -67,6 +67,7 @@
 							<span class="byline">A South African registered company, operating in Johannesburg,
 									feel free to contact us for your gardening services and utilities!</span>
 						</header>
+						<br>
 						<a href="#" class="button alt">Download App</a>
 					</section>
 				</div>
@@ -163,7 +164,7 @@
 							<section class="6u">
 								<ul class="default">
 									<li><a href="#">Download App.</a></li>
-									<li><a href="#">Visit Shop.</a></li>
+									<li><a href="/shop.html">Visit Shop.</a></li>
 									<li><a href="/projects.html">Projects.</a></li>
 									<li><a href="/services.html">Services.</a></li>
 								</ul>
