--- a/services.html
+++ b/services.html
@@ -43,7 +43,7 @@
 								<a href="">Quick Links</a>
 								<ul>
 									<li><a href="#">Download App</a></li>
-									<li><a href="#">Visit Shop</a></li>
+									<li><a href="/shop.html">Visit Shop</a></li>
 									<li><a href="#footer">Contact us</a></li>
 									<li><a href="#">Our Story</a></li>
 									<li><a href="/projects.html">Projects</a></li>
@@ -53,7 +53,7 @@
 					</li>
 					<li><a href="">Services</a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="no-sidebar.html">Download App</a></li>
+					<li><a href="">Download App</a></li>
 				</ul>
 			</nav>
 		</div>
@@ -148,8 +148,8 @@
 						<div class="row">
 							<section class="6u">
 								<ul class="default">
-									<li><a href="#">Download App.</a></li>
-									<li><a href="#">Visit Shop.</a></li>
+									<li><a href="">Download App.</a></li>
+									<li><a href="/shop.html">Visit Shop.</a></li>
 									<li><a href="/projects.html">Projects.</a></li>
 									<li><a href="/index.html">Home.</a></li>
 								</ul>
