--- a/shop.html
+++ b/shop.html
@@ -1,92 +1,150 @@
 <!DOCTYPE HTML>
-<!--
-	Horizons by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
---><html><head><title>No Sidebar - Horizons by TEMPLATED</title><meta http-equiv="content-type" content="text/html; charset=utf-8"><meta name="description" content=""><meta name="keywords" content=""><meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1"><!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]--><script src="js/jquery.min.js"></script><script src="js/jquery.dropotron.min.js"></script><script src="js/skel.min.js"></script><script src="js/skel-layers.min.js"></script><script src="js/init.js"></script><noscript>
-			<link rel="stylesheet" href="css/skel.css"><link rel="stylesheet" href="css/style.css"></noscript><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]--></head><body class="no-sidebar">
+<html>
 
-		<!-- Header -->
-			<div id="header">
-				<div class="container">
-						
-					<!-- Logo -->
-						<h1><a href="#" id="logo">Untitled</a></h1>
-					
-					<!-- Nav -->
-						<nav id="nav"><ul><li><a href="index.html">Home</a></li>
-								<li>
-									<a href="">Dropdown</a>
-									<ul><li><a href="#">Lorem ipsum dolor</a></li>
-										<li><a href="#">Magna phasellus</a></li>
-										<li><a href="#">Etiam dolore nisl</a></li>
-										<li>
-											<a href="">Phasellus consequat</a>
-											<ul><li><a href="#">Lorem ipsum dolor</a></li>
-												<li><a href="#">Phasellus consequat</a></li>
-												<li><a href="#">Magna phasellus</a></li>
-												<li><a href="#">Etiam dolore nisl</a></li>
-												<li><a href="#">Veroeros feugiat</a></li>
-											</ul></li>
-										<li><a href="#">Veroeros feugiat</a></li>
-									</ul></li>
-								<li><a href="left-sidebar.html">Left Sidebar</a></li>
-								<li><a href="right-sidebar.html">Right Sidebar</a></li>
-								<li><a href="no-sidebar.html">No Sidebar</a></li>
-							</ul></nav></div>
-			</div>
+<head>
+	<title>Matodi todi - Shop</title>
+	<link rel="icon" type="image/x-icon" href="/images/logo-transparent.png">
+	<meta http-equiv="content-type" content="text/html; charset=utf-8">
+	<meta name="description" content="">
+	<meta name="keywords" content="">
+	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+	<!--[if lte IE 8]><script src="css/ie/html5shiv.js"></script><![endif]-->
+	<script src="js/jquery.min.js"></script>
+	<script src="js/jquery.dropotron.min.js"></script>
+	<script src="js/skel.min.js"></script>
+	<script src="js/skel-layers.min.js"></script>
+	<script src="js/init.js"></script><noscript>
+		<link rel="stylesheet" href="css/skel.css">
+		<link rel="stylesheet" href="css/style.css">
+	</noscript>
+	<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
+</head>
 
-		<!-- Main -->
-			<div id="main" class="wrapper style1">
-				<div class="container">
-					<section><header class="major"><h2>No Sidebar</h2>
-							<span class="byline">Integer sit amet pede vel arcu aliquet pretium</span>
-						</header><p>Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Donec nonummy magna quis risus. Quisque eleifend. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit.</p>
-						<p>Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus.</p>
-						<p>Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Maecenas pede nisl, elementum eu, ornare ac, malesuada at, erat. Proin gravida orci porttitor enim accumsan lacinia. Donec condimentum, urna non molestie semper, ligula enim ornare nibh, quis laoreet eros quam eget ante. Aliquam libero. Vivamus nisl nibh, iaculis vitae, viverra sit amet, ullamcorper vitae, turpis. Donec ornare neque ac sem. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus. Quisque eleifend. Phasellus tempor vehicula justo. Aliquam lacinia metus ut elit. Aliquam erat volutpat. Vestibulum dui sem, pulvinar sed, imperdiet nec, iaculis nec, leo. Fusce odio. Etiam arcu dui, faucibus eget, placerat vel, sodales eget, orci. Mauris aliquet. Aliquam sem leo, vulputate sed, convallis at, ultricies quis, justo. Donec nonummy magna quis risus.</p>
-					</section></div>
-			</div>
+<body class="no-sidebar">
 
-		<!-- Footer -->
-			<div id="footer">
-				<div class="container">
+	<!-- Header -->
+	<div id="header">
+		<div class="container">
 
-					<!-- Lists -->
-						<div class="row">
-							<div class="8u">
-								<section><header class="major"><h2>Donec dictum metus</h2>
-										<span class="byline">Quisque semper augue mattis wisi maecenas ligula</span>
-									</header><div class="row">
-										<section class="6u"><ul class="default"><li><a href="#">Pellentesque elit non gravida blandit.</a></li>
-												<li><a href="#">Lorem ipsum dolor consectetuer elit.</a></li>
-												<li><a href="#">Phasellus nibh pellentesque congue.</a></li>
-												<li><a href="#">Cras vitae metus aliquam  pharetra.</a></li>
-											</ul></section><section class="6u"><ul class="default"><li><a href="#">Pellentesque elit non gravida blandit.</a></li>
-												<li><a href="#">Lorem ipsum dolor consectetuer elit.</a></li>
-												<li><a href="#">Phasellus nibh pellentesque congue.</a></li>
-												<li><a href="#">Cras vitae metus aliquam  pharetra.</a></li>
-											</ul></section></div>
-								</section></div>
-							<div class="4u">
-								<section><header class="major"><h2>Donec dictum metus</h2>
-										<span class="byline">Mattis wisi maecenas ligula</span>
-									</header><ul class="contact"><li>
-											<span class="address">Address</span>
-											<span>1234 Somewhere Road #4285 <br>Nashville, TN 00000</span>
-										</li>
-										<li>
-											<span class="mail">Mail</span>
-											<span><a href="#">someone@untitled.tld</a></span>
-										</li>
-										<li>
-											<span class="phone">Phone</span>
-											<span>(000) 000-0000</span>
-										</li>
-									</ul></section></div>
+			<!-- Logo -->
+			<h1><a href="#" id="logo">Matodi todi - Shop</a></h1>
+
+			<!-- Nav -->
+			<nav id="nav">
+				<ul>
+					<li><a href="index.html">Home</a></li>
+					<li>
+						<a href="">Products</a>
+						<ul>
+							<li><a href="#">Apparel</a></li>
+							<li><a href="#">Farming</a></li>
+							<li><a href="#">Gardening</a></li>
+							<li>
+								<a href="">Quick Links</a>
+								<ul>
+									<li><a href="#">Download App</a></li>
+									<li><a href="#">Visit Shop</a></li>
+									<li><a href="#footer">Contact us</a></li>
+									<li><a href="/services.html">Our Story</a></li>
+									<li><a href="/services.html">Services</a></li>
+								</ul>
+							</li>
+						</ul>
+					</li>
+					<li><a href="/services.html">Services</a></li>
+					<li><a href="/projects.html">Projects</a></li>
+					<li><a href="/checkout.html">Check Out</a></li>
+					<li><a href="#">Download App</a></li>
+				</ul>
+			</nav>	
+		</div>
+	</div>
+
+	<!-- Main -->
+	<div id="main" class="wrapper style1">
+		<div class="container">
+				<section class="product-page">
+					<div class="product-container">
+						<div class="product-image">
+							<img src="product-image.jpg" alt="Product Image">
 						</div>
+						<div class="product-info">
+							<h1 class="product-title">Sustainable Farming Kit</h1>
+							<p class="product-description">A comprehensive farming kit designed to help you start sustainable farming practices. Includes seeds, tools, and resources.</p>
+							<p class="product-price">$49.99</p>
+							<button class="add-to-cart">Add to Cart</button>
+						</div>
+					</div>
+				</section>
+
+				<section class="product-page">
+					<div class="product-container">
+						<div class="product-image">
+							<img src="product-image.jpg" alt="Product Image">
+						</div>
+						<div class="product-info">
+							<h1 class="product-title">Sustainable Farming Kit</h1>
+							<p class="product-description">A comprehensive farming kit designed to help you start sustainable farming practices. Includes seeds, tools, and resources.</p>
+							<p class="product-price">$49.99</p>
+							<button class="add-to-cart">Add to Cart</button>
+						</div>
+					</div>
+				</section>
+		</div>
+	</div>
+
+	<!-- Footer -->
+	<div id="footer">
+		<div class="container">
+
+			<!-- Lists -->
+			<div class="row">
+				<div class="8u">
+					<section>
+						<header class="major">
+							<h2>Quick Links</h2>
+							<span class="byline">Matodi todi is a <a href="https://b2bhint.com/en/company/za/matodi-todi--K2015182744">registered company</a> find out more :</span>
+						</header>
+						<div class="row">
+							<section class="6u">
+								<ul class="default">
+									<li><a href="#">Download App.</a></li>
+									<li><a href="#">Visit Shop.</a></li>
+									<li><a href="/services.html">Services.</a></li>
+									<li><a href="/index.html">Home.</a></li>
+								</ul>
+							</section>
+						</div>
+					</section>
+				</div>
+				<div class="4u">
+					<section>
+						<header class="major">
+							<h2>Matodi todi Contacts</h2>
+						</header>
+						<ul class="contact">
+							<li>
+								<span class="address">Address</span>
+								<span> 45 Deysel Road <br>Honeydew, ZA 2178</span>
+							</li>
+							<li>
+								<span class="mail">Mail</span>
+								<span><a href="#">support@matoditodi.garden</a></span>
+							</li>
+							<li>
+								<span class="phone">Phone</span>
+								<span>(27) 73 865 1439</span>
+							</li>
+						</ul>
+					</section>
 				</div>
 			</div>
-		<div class="copyright">
-			Design by: <a href="https://templated.co/">TEMPLATED</a>
+
 		</div>
-	</body></html>
+	</div>
+	<div class="copyright">
+		© 2024 Matodi todi Ltd (Company No.K2015182744). All rights reserved.
+	</div>
+</body>
+
+</html>
