update shop page

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="">Products</a>
 						<ul>
-							<li><a href="#">Apparel</a></li>
+							<li><a href="#">Foodies</a></li>
 							<li><a href="#">Farming</a></li>
 							<li><a href="#">Gardening</a></li>
 							<li>
