--- a/shop.html
+++ b/shop.html
@@ -36,7 +36,7 @@
 					<li>
 						<a href="">Products</a>
 						<ul>
-							<li><a href="#">Apparel</a></li>
+							<li><a href="#">Foodies</a></li>
 							<li><a href="#">Farming</a></li>
 							<li><a href="#">Gardening</a></li>
 							<li>
@@ -63,33 +63,85 @@
 	<!-- Main -->
 	<div id="main" class="wrapper style1">
 		<div class="container">
-				<section class="product-page">
-					<div class="product-container">
-						<div class="product-image">
-							<img src="product-image.jpg" alt="Product Image">
-						</div>
-						<div class="product-info">
-							<h1 class="product-title">Sustainable Farming Kit</h1>
-							<p class="product-description">A comprehensive farming kit designed to help you start sustainable farming practices. Includes seeds, tools, and resources.</p>
-							<p class="product-price">$49.99</p>
-							<button class="add-to-cart">Add to Cart</button>
-						</div>
-					</div>
-				</section>
-
-				<section class="product-page">
-					<div class="product-container">
-						<div class="product-image">
-							<img src="product-image.jpg" alt="Product Image">
-						</div>
-						<div class="product-info">
-							<h1 class="product-title">Sustainable Farming Kit</h1>
-							<p class="product-description">A comprehensive farming kit designed to help you start sustainable farming practices. Includes seeds, tools, and resources.</p>
-							<p class="product-price">$49.99</p>
-							<button class="add-to-cart">Add to Cart</button>
-						</div>
-					</div>
-				</section>
+			<section class="gradients">
+				<ul class="list-gradient">
+				  <li class="item-gradient" style="--start:#00bd56;--end:#f9fd50;">
+					<div class="gradient"></div>
+					<p class="start">#00bd56</p>
+					<p class="end">#f9fd50</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#26baee;--end:#9fe8fa;">
+					<div class="gradient"></div>
+					<p class="start">#26baee</p>
+					<p class="end">#9fe8fa</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#8f71ff;--end:#8bffff;">
+					<div class="gradient"></div>
+					<p class="start">#8f71ff</p>
+					<p class="end">#8bffff</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#c7004c;--end:#ffaaaa;">
+					<div class="gradient"></div>
+					<p class="start">#c7004c</p>
+					<p class="end">#ffaaaa</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#55968f;--end:#8acbbb;">
+					<div class="gradient"></div>
+					<p class="start">#55968f</p>
+					<p class="end">#8acbbb</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#226b80;--end:#35b0ab;">
+					<div class="gradient"></div>
+					<p class="start">#226b80</p>
+					<p class="end">#35b0ab</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#3d6cb9;--end:#00fff0;">
+					<div class="gradient"></div>
+					<p class="start">#3d6cb9</p>
+					<p class="end">#00fff0</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#4d3664;--end:#bab5f6;">
+					<div class="gradient"></div>
+					<p class="start">#4d3664</p>
+					<p class="end">#bab5f6</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#fa4659;--end:#e9007f;">
+					<div class="gradient"></div>
+					<p class="start">#fa4659</p>
+					<p class="end">#e9007f</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#00b7c2;--end:#4ef037;">
+					<div class="gradient"></div>
+					<p class="start">#00b7c2</p>
+					<p class="end">#4ef037</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#303481;--end:#a100ff;">
+					<div class="gradient"></div>
+					<p class="start">#303481</p>
+					<p class="end">#a100ff</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#fc8a15;--end:#fff6a2;">
+					<div class="gradient"></div>
+					<p class="start">#fc8a15</p>
+					<p class="end">#fff6a2</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#f9d00f;--end:#fbff64;">
+					<div class="gradient"></div>
+					<p class="start">#f9d00f</p>
+					<p class="end">#fbff64</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#295e6a;--end:#4797b1;">
+					<div class="gradient"></div>
+					<p class="start">#295e6a</p>
+					<p class="end">#4797b1</p>
+				  </li>
+				  <li class="item-gradient" style="--start:#ff0592;--end:#ffbee3;">
+					<div class="gradient"></div>
+					<p class="start">#ff0592</p>
+					<p class="end">#ffbee3</p>
+				  </li>
+				</ul>
+			  </section>		  
 		</div>
 	</div>
 
